--- a/static/devtron.html
+++ b/static/devtron.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>devtron</title>
-    <script>
-      chrome.devtools.panels.create('Devtron', 'devtron.png', 'static/index.html')
-    </script>
+    <script src="devtron.js"></script>
   </head>
 </html>
